release 2022.1.0, supports ZGC